[package]
name = "exportbranch"
version = "0.1.3"
edition = "2021"

[dependencies]
regex = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "convert"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
