[package]
name = "exportbranch"
version = "0.1.8"
edition = "2021"

[dependencies]
regex = "1"
rayon = "1"
clap = { version = "4", features = ["derive"] }
clap_complete = "4"

[dev-dependencies]
tempfile = "3"
criterion = { version = "0.5", default-features = false }

[[bench]]
name = "convert"
harness = false

[[bench]]
name = "walk"
harness = false

[lints.rust]
unsafe_code = "forbid"

[lints.clippy]
pedantic = { level = "deny", priority = -1 }

[profile.release]
lto = "thin"
codegen-units = 1
